--- a/pom.xml
+++ b/pom.xml
@@ -1,240 +1,265 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-   <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-   <parent>
-      <groupId>org.jboss.seam</groupId>
-      <artifactId>seam-parent</artifactId>
-      <version>10</version>
-   </parent>
+    <parent>
+        <groupId>org.jboss.seam</groupId>
+        <artifactId>seam-parent</artifactId>
+        <version>10</version>
+    </parent>
 
-   <groupId>org.jboss.seam.jms</groupId>
-   <artifactId>seam-jms-parent</artifactId>
-   <packaging>pom</packaging>
-   <version>3.0.0-SNAPSHOT</version>
+    <groupId>org.jboss.seam.jms</groupId>
+    <artifactId>seam-jms-parent</artifactId>
+    <packaging>pom</packaging>
+    <version>3.0.0-SNAPSHOT</version>
 
-   <name>Seam JMS Module</name>
-   <url>http://sfwk.org/Seam3/JMS</url>
+    <name>Seam JMS Module</name>
+    <url>http://sfwk.org/Seam3/JMS</url>
 
-   <properties>
-      <seam.version>3.0.0.Final</seam.version>
-      <arquillian.version>1.0.0.Alpha4</arquillian.version>
-      <emma.version>2.0.5312</emma.version>
-   </properties>
+    <properties>
+        <seam.version>3.0.0.Final</seam.version>
+        <arquillian.version>1.0.0.Alpha5</arquillian.version>
+        <emma.version>2.0.5312</emma.version>
+    </properties>
 
-   <modules>
-      <module>api</module>
-      <module>impl</module>
-      <module>combined</module>
-   </modules>
+    <modules>
+        <module>api</module>
+        <module>impl</module>
+        <module>combined</module>
+    </modules>
    
-   <dependencyManagement>
-      <dependencies>
-         <dependency>
-            <groupId>org.jboss.seam</groupId>
-            <artifactId>seam-bom</artifactId>
-            <version>${seam.version}</version>
-            <scope>import</scope>
-            <type>pom</type>
-         </dependency>
-         
-         <!-- Override the dependencyManagement of org.jboss.seam:seam for modules from this project -->
-         <dependency>
-            <groupId>org.jboss.seam.jms</groupId>
-            <artifactId>seam-jms-api</artifactId>
-            <version>${project.version}</version>
-         </dependency>
-
-         <dependency>
-            <groupId>org.jboss.seam.jms</groupId>
-            <artifactId>seam-jms-impl</artifactId>
-            <version>${project.version}</version>
-         </dependency>
-         
-         <dependency>
-            <groupId>org.jboss.seam.jms</groupId>
-            <artifactId>seam-jms</artifactId>
-            <version>${project.version}</version>
-         </dependency>            
-      </dependencies>
-   </dependencyManagement>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.jboss.spec</groupId>
+                <artifactId>jboss-javaee-6.0</artifactId>
+                <version>1.0.0.Final</version>
+                <type>pom</type>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+               <groupId>javax.enterprise</groupId>
+               <artifactId>cdi-api</artifactId>
+               <version>1.0-SP4</version>
+               <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.seam.solder</groupId>
+                <artifactId>seam-solder</artifactId>
+                <version>3.0.0.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.seam.jms</groupId>
+                <artifactId>seam-jms-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.seam.jms</groupId>
+                <artifactId>seam-jms-impl</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.seam.jms</groupId>
+                <artifactId>seam-jms</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.spec.javax.jms</groupId>
+                <artifactId>jboss-jms-api_1.1_spec</artifactId>
+                <version>1.0.0.Final</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.logging</groupId>
+                <artifactId>jboss-logging</artifactId>
+                <version>3.0.0.Beta4</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.spec.javax.servlet</groupId>
+                <artifactId>jboss-servlet-api_3.0_spec</artifactId>
+                <version>1.0.0.Final</version>
+                <scope>provided</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
    <!-- Only build the distribution if requested explicitly -->
-   <profiles>
-      <profile>
-         <id>distribution</id>
-         <activation>
-            <property>
-               <name>release</name>
-            </property>
-         </activation>
-         <modules>
-            <module>dist</module>
-            <module>docs/reference</module>
-	    <module>examples/jms-statuswatcher</module>
-         </modules>
-      </profile>
-      <profile>
-         <id>code-coverage</id>
-         <dependencies>
-            <dependency>
-               <groupId>emma</groupId>
-               <artifactId>emma</artifactId>
-               <version>${emma.version}</version>
-            </dependency>
-         </dependencies>
-         <build>
-            <pluginManagement>
-               <plugins>
-                  <plugin>
-                     <groupId>org.apache.maven.plugins</groupId>
-                     <artifactId>maven-dependency-plugin</artifactId>
-                     <executions>
-                        <execution>
-                           <id>deploy-emma-jar</id>
-                           <phase>process-test-sources</phase>
-                           <goals>
-                              <goal>copy</goal>
-                           </goals>
-                           <configuration>
-                              <artifactItems>
-                                 <artifactItem>
-                                    <groupId>emma</groupId>
-                                    <artifactId>emma</artifactId>
-                                    <version>${emma.version}</version>
-                                    <type>jar</type>
-                                    <overWrite>true</overWrite>
-                                    <outputDirectory>${env.JBOSS_HOME}/server/default/lib</outputDirectory>
-                                 </artifactItem>
-                              </artifactItems>
-                           </configuration>
-                        </execution>
-                     </executions>
-                  </plugin>
-                  <plugin>
-                     <groupId>org.apache.maven.plugins</groupId>
-                     <artifactId>maven-antrun-plugin</artifactId>
-                     <executions>
-                        <execution>
-                           <id>retrieve-coverage-file</id>
-                           <phase>test</phase>
-                           <goals>
-                              <goal>run</goal>
-                           </goals>
-                           <configuration>
-                              <tasks>
-                                 <move file="${env.JBOSS_HOME}/bin/coverage.ec" todir="${basedir}" failonerror="false" />
-                              </tasks>
-                           </configuration>
-                        </execution>
-                     </executions>
-                  </plugin>
-                  <plugin>
-                     <artifactId>maven-clean-plugin</artifactId>
-                     <configuration>
-                        <filesets>
-                           <fileset>
-                              <directory>${basedir}/</directory>
-                              <includes>
-                                 <include>**/*.ec</include>
-                                 <include>**/*.em</include>
-                                 <include>**/transaction.log</include>
-                              </includes>
-                              <followSymlinks>false</followSymlinks>
-                           </fileset>
-                        </filesets>
-                     </configuration>
-                  </plugin>
-               </plugins>
-            </pluginManagement>
-         </build>
-      </profile>
-      <profile>
-         <id>jboss-public-repository</id>
-         <activation>
-            <property>
-               <name>jboss-public-repository</name>
-               <value>!false</value>
-            </property>
-         </activation>
-         <repositories>
-            <repository>
-               <id>jboss-public-repository-group</id>
-               <name>JBoss Public Maven Repository Group</name>
-               <url>http://repository.jboss.org/nexus/content/groups/public</url>
-               <releases>
-                  <enabled>true</enabled>
-                  <updatePolicy>never</updatePolicy>
-               </releases>
-               <snapshots>
-                  <enabled>false</enabled>
-                  <updatePolicy>never</updatePolicy>
-               </snapshots>
-            </repository>
-         </repositories>
-         <pluginRepositories>
-            <pluginRepository>
-               <id>jboss-public-repository-group</id>
-               <name>JBoss Public Maven Repository Group</name>
-               <url>http://repository.jboss.org/nexus/content/groups/public</url>
-               <releases>
-                  <enabled>true</enabled>
-                  <updatePolicy>never</updatePolicy>
-               </releases>
-               <snapshots>
-                  <enabled>false</enabled>
-                  <updatePolicy>never</updatePolicy>
-               </snapshots>
-            </pluginRepository>
-         </pluginRepositories>
-      </profile>
-   </profiles>
+    <profiles>
+        <profile>
+            <id>distribution</id>
+            <activation>
+                <property>
+                    <name>release</name>
+                </property>
+            </activation>
+            <modules>
+                <module>dist</module>
+                <module>docs/reference</module>
+                <module>examples/jms-statuswatcher</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>code-coverage</id>
+            <dependencies>
+                <dependency>
+                    <groupId>emma</groupId>
+                    <artifactId>emma</artifactId>
+                    <version>${emma.version}</version>
+                </dependency>
+            </dependencies>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-dependency-plugin</artifactId>
+                            <executions>
+                                <execution>
+                                    <id>deploy-emma-jar</id>
+                                    <phase>process-test-sources</phase>
+                                    <goals>
+                                        <goal>copy</goal>
+                                    </goals>
+                                    <configuration>
+                                        <artifactItems>
+                                            <artifactItem>
+                                                <groupId>emma</groupId>
+                                                <artifactId>emma</artifactId>
+                                                <version>${emma.version}</version>
+                                                <type>jar</type>
+                                                <overWrite>true</overWrite>
+                                                <outputDirectory>${env.JBOSS_HOME}/server/default/lib</outputDirectory>
+                                            </artifactItem>
+                                        </artifactItems>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-antrun-plugin</artifactId>
+                            <executions>
+                                <execution>
+                                    <id>retrieve-coverage-file</id>
+                                    <phase>test</phase>
+                                    <goals>
+                                        <goal>run</goal>
+                                    </goals>
+                                    <configuration>
+                                        <tasks>
+                                            <move file="${env.JBOSS_HOME}/bin/coverage.ec" todir="${basedir}" failonerror="false" />
+                                        </tasks>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                        </plugin>
+                        <plugin>
+                            <artifactId>maven-clean-plugin</artifactId>
+                            <configuration>
+                                <filesets>
+                                    <fileset>
+                                        <directory>${basedir}/</directory>
+                                        <includes>
+                                            <include>**/*.ec</include>
+                                            <include>**/*.em</include>
+                                            <include>**/transaction.log</include>
+                                        </includes>
+                                        <followSymlinks>false</followSymlinks>
+                                    </fileset>
+                                </filesets>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+        </profile>
+        <profile>
+            <id>jboss-public-repository</id>
+            <activation>
+                <property>
+                    <name>jboss-public-repository</name>
+                    <value>!false</value>
+                </property>
+            </activation>
+            <repositories>
+                <repository>
+                    <id>jboss-public-repository-group</id>
+                    <name>JBoss Public Maven Repository Group</name>
+                    <url>http://repository.jboss.org/nexus/content/groups/public</url>
+                    <releases>
+                        <enabled>true</enabled>
+                        <updatePolicy>never</updatePolicy>
+                    </releases>
+                    <snapshots>
+                        <enabled>false</enabled>
+                        <updatePolicy>never</updatePolicy>
+                    </snapshots>
+                </repository>
+            </repositories>
+            <pluginRepositories>
+                <pluginRepository>
+                    <id>jboss-public-repository-group</id>
+                    <name>JBoss Public Maven Repository Group</name>
+                    <url>http://repository.jboss.org/nexus/content/groups/public</url>
+                    <releases>
+                        <enabled>true</enabled>
+                        <updatePolicy>never</updatePolicy>
+                    </releases>
+                    <snapshots>
+                        <enabled>false</enabled>
+                        <updatePolicy>never</updatePolicy>
+                    </snapshots>
+                </pluginRepository>
+            </pluginRepositories>
+        </profile>
+    </profiles>
 
-   <issueManagement>
-      <system>JIRA</system>
-      <url>https://issues.jboss.org/browse/SEAMJMS</url>
-   </issueManagement>
+    <issueManagement>
+        <system>JIRA</system>
+        <url>https://issues.jboss.org/browse/SEAMJMS</url>
+    </issueManagement>
 
-   <ciManagement>
-      <system>Hudson</system>
-      <url>http://hudson.jboss.org/hudson/view/Seam/job/Seam-3.X-jms-CI</url>
-   </ciManagement>
+    <ciManagement>
+        <system>Hudson</system>
+        <url>http://hudson.jboss.org/hudson/view/Seam/job/Seam-3.X-jms-CI</url>
+    </ciManagement>
 
-   <scm>
-      <connection>scm:git:git://github.com/seam/jms.git</connection>
-      <developerConnection>scm:git:git@github.com:seam/jms.git</developerConnection>
-      <url>http://github.com/seam/jms</url>
-   </scm>
+    <scm>
+        <connection>scm:git:git://github.com/seam/jms.git</connection>
+        <developerConnection>scm:git:git@github.com:seam/jms.git</developerConnection>
+        <url>http://github.com/seam/jms</url>
+    </scm>
 
-   <developers>
-      <developer>
-         <name>John Ament</name>
-         <email>john.d.ament@gmail.com</email>
-         <timezone>EST</timezone>
-         <roles>
-            <role>Project Lead</role>
-         </roles>
-         <url>http://community.jboss.org/people/meetoblivion</url>
-      </developer>
-    <developer>
-         <name>Jordan Ganoff</name>
-         <email>jganoff@gmail.com</email>
-         <timezone>EST</timezone>
-         <roles>
-            <role>Founder</role>
-            <role>Contributor</role>
-         </roles>
-         <url>http://community.jboss.org/people/jganoff</url>
-      </developer>
-      <developer>
-         <name>Dan Allen</name>
-         <organization>JBoss, by Red Hat</organization>
-         <organizationUrl>http://jboss.org</organizationUrl>
-         <timezone>EST</timezone>
-         <roles>
-            <role>Advisor</role>
-            <role>Contributor</role>
-         </roles>
-      </developer>
-   </developers>
+    <developers>
+        <developer>
+            <name>John Ament</name>
+            <email>john.d.ament@gmail.com</email>
+            <timezone>EST</timezone>
+            <roles>
+                <role>Project Lead</role>
+            </roles>
+            <url>http://community.jboss.org/people/meetoblivion</url>
+        </developer>
+        <developer>
+            <name>Jordan Ganoff</name>
+            <email>jganoff@gmail.com</email>
+            <timezone>EST</timezone>
+            <roles>
+                <role>Founder</role>
+                <role>Contributor</role>
+            </roles>
+            <url>http://community.jboss.org/people/jganoff</url>
+        </developer>
+        <developer>
+            <name>Dan Allen</name>
+            <organization>JBoss, by Red Hat</organization>
+            <organizationUrl>http://jboss.org</organizationUrl>
+            <timezone>EST</timezone>
+            <roles>
+                <role>Advisor</role>
+                <role>Contributor</role>
+            </roles>
+        </developer>
+    </developers>
 </project>
