--- a/api/pom.xml
+++ b/api/pom.xml
@@ -27,6 +27,10 @@
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.seam.solder</groupId>
+            <artifactId>seam-solder</artifactId>
+        </dependency>
         <!--
         <dependency>
             <groupId>org.jboss.spec.javax.jms</groupId>
@@ -34,11 +38,11 @@
             <scope>provided</scope>
         </dependency>
         -->
-        <dependency>
+        <!--dependency>
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging</artifactId>
             <scope>provided</scope>
-        </dependency>
+        </dependency-->
         <!--
         <dependency>
             <groupId>org.jboss.spec.javax.servlet</groupId>
