--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,16 @@
    
     <dependencyManagement>
         <dependencies>
+
             <dependency>
+                <groupId>org.jboss.seam</groupId>
+                <artifactId>seam-bom</artifactId>
+                <version>${seam.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!--dependency>
                 <groupId>org.jboss.spec</groupId>
                 <artifactId>jboss-javaee-6.0</artifactId>
                 <version>1.0.0.Final</version>
@@ -47,7 +56,7 @@
                 <groupId>org.jboss.seam.solder</groupId>
                 <artifactId>seam-solder</artifactId>
                 <version>3.0.0.Final</version>
-            </dependency>
+            </dependency-->
             <dependency>
                 <groupId>org.jboss.seam.jms</groupId>
                 <artifactId>seam-jms-api</artifactId>
@@ -69,12 +78,12 @@
                 <version>1.0.0.Final</version>
                 <scope>provided</scope>
             </dependency>
-            <dependency>
+            <!--dependency>
                 <groupId>org.jboss.logging</groupId>
                 <artifactId>jboss-logging</artifactId>
                 <version>3.0.0.Beta4</version>
                 <scope>provided</scope>
-            </dependency>
+            </dependency-->
             <dependency>
                 <groupId>org.jboss.spec.javax.servlet</groupId>
                 <artifactId>jboss-servlet-api_3.0_spec</artifactId>
