--- a/examples/jms-statuswatcher/pom.xml
+++ b/examples/jms-statuswatcher/pom.xml
@@ -18,6 +18,7 @@
       <jboss.home>${env.JBOSS_HOME}</jboss.home>
       <jboss.domain>default</jboss.domain>
       <seam.jms.version>3.0.0-SNAPSHOT</seam.jms.version>
+      <seam.servlet.version>3.0.0.Final</seam.servlet.version>
       <jsf.version>2.0.2-FCS</jsf.version>
       <ajax4jsf.version>1.0.5</ajax4jsf.version>
    </properties>
@@ -28,6 +29,12 @@
          <groupId>org.jboss.seam.jms</groupId>
          <artifactId>seam-jms</artifactId>
          <version>${seam.jms.version}</version>
+      </dependency>
+
+      <dependency>
+         <groupId>org.jboss.seam.servlet</groupId>
+         <artifactId>seam-servlet</artifactId>
+         <version>${seam.servlet.version}</version>
       </dependency>
 
       <dependency>
