--- a/examples/jms-statuswatcher/pom.xml
+++ b/examples/jms-statuswatcher/pom.xml
@@ -5,7 +5,7 @@
    <parent>
       <groupId>org.jboss.seam.jms</groupId>
       <artifactId>seam-jms-parent</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>3.0.0.CR1</version>
       <relativePath>../../pom.xml</relativePath>
    </parent>
 
@@ -17,7 +17,7 @@
    <properties>
       <jboss.home>${env.JBOSS_HOME}</jboss.home>
       <jboss.domain>default</jboss.domain>
-      <seam.jms.version>3.0.0-SNAPSHOT</seam.jms.version>
+      <seam.jms.version>3.0.0.CR1</seam.jms.version>
       <seam.servlet.version>3.0.0.Final</seam.servlet.version>
       <jsf.version>2.0.2-FCS</jsf.version>
       <ajax4jsf.version>1.0.5</ajax4jsf.version>
