--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -27,6 +27,7 @@
         <dependency>
             <groupId>org.jboss.spec</groupId>
             <artifactId>jboss-javaee-6.0</artifactId>
+	    <version>1.0.0.Final</version>
             <type>pom</type>
         </dependency>
         <dependency>
